--- a/api-example/template.yaml
+++ b/api-example/template.yaml
@@ -41,6 +41,11 @@ Resources:
       Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
         Variables:
           PARAM1: VALUE
+  HelloWorldFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${HelloWorldFunction}
+      RetentionInDays: 14
   HelloWorldApiKey:
     Type: AWS::ApiGateway::ApiKey
     DependsOn: HelloWorldApi
